--- a/Projets/OhMyFood/scss/main.scss
+++ b/Projets/OhMyFood/scss/main.scss
@@ -10,7 +10,7 @@
 @import url('https://fonts.googleapis.com/css?family=Kaushan+Script&display=swap'); /*font-family: Kaushan script (gout) */
 
 .menus {
-	padding: 2rem 3rem 2rem 3rem;
+	padding: 2.6vw 3.9vw;
 	display:flex;
 	justify-content: center;
 	flex-wrap: wrap;
