--- a/Projets/OhMyFood/css/style.css
+++ b/Projets/OhMyFood/css/style.css
@@ -122,7 +122,7 @@ img {
 }
 @media (orientation: landscape) {
   img {
-    max-width: 25%;
+    max-width: 20%;
   }
 }
 
@@ -130,7 +130,7 @@ th {
   padding-top: 2.6vw;
   padding-bottom: 2.6vw;
 }
-@media (orientation: landscape) and (min-device-width: 992px) {
+@media (orientation: landscape) and (min-width: 992px) {
   th {
     padding-top: 1.3vw;
     padding-bottom: 1.3vw;
@@ -281,6 +281,21 @@ td {
   background: #fdfffd;
 }
 
+.pos-rel {
+  position: relative;
+  bottom: 7%;
+}
+@media (orientation: landscape) {
+  .pos-rel {
+    bottom: 12%;
+  }
+}
+@media (orientation: landscape) and (min-width: 992px) and (max-width: 1200px) {
+  .pos-rel {
+    bottom: 7%;
+  }
+}
+
 .font {
   font-weight: normal;
 }
@@ -302,12 +317,6 @@ td {
     line-height: 2.6vw;
   }
 }
-@media (orientation: landscape) and (min-width: 992px) {
-  .font__title--enchantee {
-    height: auto;
-    padding-bottom: 3vw;
-  }
-}
 .font__title--alafrancaise {
   font-size: 3.5vw;
   font-family: "Croissant One";
@@ -323,7 +332,7 @@ td {
 .font__title--papilles {
   font-family: "cookie";
   font-weight: normal;
-  font-size: 6vw;
+  font-size: 5.5vw;
   background: linear-gradient(-80deg, #0228dd 0%, #0670f3 50%, #229df9 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -336,14 +345,14 @@ td {
 .font__title--gout {
   font-family: "kaushan script";
   font-weight: normal;
-  font-size: 5vw;
+  font-size: 4.5vw;
   background: linear-gradient(-80deg, #41963c 0%, #80cb5e 50%, #beff7f 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 @media (orientation: landscape) {
   .font__title--gout {
-    font-size: 3.5vw;
+    font-size: 2.8vw;
   }
 }
 @media (orientation: landscape) and (max-width: 992px) {
@@ -360,6 +369,7 @@ td {
   }
 }
 .font__subtitle--enchantee {
+  font-size: 4vw;
   font-family: "Segoe Print";
   font-weight: bold;
   margin-top: 1.3vw;
@@ -367,12 +377,6 @@ td {
 @media (orientation: landscape) {
   .font__subtitle--enchantee {
     font-size: 3vw;
-  }
-}
-@media (orientation: landscape) and (min-width: 992px) {
-  .font__subtitle--enchantee {
-    padding-top: 5.2vw;
-    line-height: 2.6vw;
   }
 }
 .font__subtitle--alafrancaise {
