--- a/Projets/OhMyFood/css/style-menu-gout.css
+++ b/Projets/OhMyFood/css/style-menu-gout.css
@@ -32,7 +32,12 @@ img {
 }
 @media (orientation: landscape) {
   img {
-    max-width: 25%;
+    max-width: 20%;
+  }
+}
+@media (orientation: landscape) and (max-width: 768px) {
+  img {
+    max-width: 15%;
   }
 }
 
@@ -148,22 +153,22 @@ td {
   animation-delay: 0s;
 }
 
-.zoom__menu--enchantee:hover {
+.zoom__menu--enchantee:hover, .zoom__menu--enchantee:active {
   transform: scale(1.1);
   opacity: 0.5;
 }
 
-.zoom__menu--alafrancaise:hover {
+.zoom__menu--alafrancaise:hover, .zoom__menu--alafrancaise:active {
   transform: scale(1.2);
   opacity: 0.5;
 }
 
-.zoom__menu--papilles:hover {
+.zoom__menu--papilles:hover, .zoom__menu--papilles:active {
   transform: scale(1.1);
   opacity: 0.5;
 }
 
-.zoom__menu--gout:hover {
+.zoom__menu--gout:hover, .zoom__menu--gout:active {
   transform: scale(1.1);
   opacity: 0.5;
 }
@@ -225,13 +230,7 @@ td {
   /*vw for responsive padding*/
   text-align: center;
 }
-@media (orientation: landscape) and (min-width: 992px) {
-  .menus {
-    padding: 0 12vw;
-  }
-}
 .menus__card {
-  width: 90%;
   height: auto;
   margin: 0;
   padding: 3.9vw;
