--- a/Projets/OhMyFood/css/style-menu-papilles.css
+++ b/Projets/OhMyFood/css/style-menu-papilles.css
@@ -277,13 +277,18 @@ tr {
 }
 
 .font__table--papilles {
-  font-size: 1.7vw;
+  font-size: 2.4vw;
   font-family: "Segoe Print";
   margin-bottom: 14.3vw;
 }
 @media (min-width: 992px) {
   .font__table--papilles {
     font-size: 2.4vw;
+  }
+}
+@media (orientation: landscape) {
+  .font__table--papilles {
+    font-size: 1.7vw;
   }
 }
 @media (orientation: landscape) and (max-width: 768px) {
