--- a/Projets/OhMyFood/css/style.css
+++ b/Projets/OhMyFood/css/style.css
@@ -35,6 +35,10 @@
   animation-delay: 0s;
 }
 
+.zoom__menu--enchantee, .zoom__menu--alafrancaise, .zoom__menu--papilles, .zoom__menu--gout {
+  transition: all 1s;
+}
+
 .zoom__menu--enchantee:hover, .zoom__menu--enchantee:active {
   transform: scale(1.1);
   opacity: 0.5;
@@ -143,7 +147,7 @@ th {
 }
 
 td {
-  padding-top: 1rem;
+  padding-top: 1.3vw;
 }
 
 .header {
@@ -162,14 +166,13 @@ td {
   position: fixed;
   width: 100%;
   bottom: 0;
-  padding: 0;
 }
 .footer__list {
-  padding-left: 20px;
-  padding-right: 20px;
-  margin: 0.5rem;
   display: flex;
   justify-content: space-between;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin: 0.65vw;
   list-style: none;
   font-size: 4vw;
 }
@@ -210,16 +213,11 @@ td {
   opacity: 1;
 }
 
-/*font-family: devonshire (enchantee), menu segoe print*/
-/*font-family: 'Croissant One' (alafrancaise), Menu Cambria*/
-/*font-family: cookie (papilles)*/
-/*font-family: Kaushan script (gout) */
 .menus {
   padding: 1vw 2vw;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  font-size: 3.5vw;
 }
 @media (orientation: landscape) {
   .menus {
@@ -237,39 +235,27 @@ td {
   flex-direction: column;
   justify-content: center;
 }
-@media (max-width: 768px) {
-  .menus__card {
-    height: 50vh;
-  }
-}
 @media (orientation: landscape) {
   .menus__card {
     width: 15%;
-    height: 20vw;
-    padding: 1.3vw;
+    padding: 0;
+    height: 40vh;
   }
 }
 @media (orientation: landscape) and (max-width: 768px) {
   .menus__card {
-    padding: 0;
     width: 40%;
-    height: 40vh;
   }
 }
 @media (orientation: landscape) and (min-width: 768px) and (max-width: 992px) {
   .menus__card {
     height: 50vh;
+    padding: 1.3vw;
   }
 }
 @media (orientation: landscape) and (min-width: 992px) {
   .menus__card {
     width: 20%;
-    padding: 0;
-    height: 60vh;
-  }
-}
-@media (orientation: landscape) and (min-width: 1200px) {
-  .menus__card {
     height: 60vh;
   }
 }
@@ -291,11 +277,6 @@ td {
   bottom: 7%;
 }
 @media (orientation: landscape) {
-  .pos-rel {
-    bottom: 18%;
-  }
-}
-@media (orientation: landscape) and (min-width: 501px) and (max-width: 768px) {
   .pos-rel {
     bottom: 18%;
   }
@@ -335,9 +316,9 @@ td {
 .font__title--alafrancaise {
   font-size: 3.5vw;
   font-family: "Croissant One";
-  background: linear-gradient(-80deg, #e38a12 0%, #a56799 50%, #8f5aff 100%);
+  background: linear-gradient(80deg, #e38a12 0%, #a56799 50%, #8f5aff 100%);
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  color: transparent;
 }
 @media (orientation: landscape) {
   .font__title--alafrancaise {
@@ -346,11 +327,10 @@ td {
 }
 .font__title--papilles {
   font-family: "cookie";
-  font-weight: normal;
   font-size: 5.5vw;
-  background: linear-gradient(-80deg, #0228dd 0%, #0670f3 50%, #229df9 100%);
+  background: linear-gradient(80deg, #0228dd 0%, #0670f3 50%, #229df9 100%);
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  color: transparent;
 }
 @media (orientation: landscape) {
   .font__title--papilles {
@@ -359,11 +339,10 @@ td {
 }
 .font__title--gout {
   font-family: "kaushan script";
-  font-weight: normal;
   font-size: 4.5vw;
-  background: linear-gradient(-80deg, #41963c 0%, #80cb5e 50%, #beff7f 100%);
+  background: linear-gradient(80deg, #41963c 0%, #80cb5e 50%, #beff7f 100%);
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  color: transparent;
 }
 @media (orientation: landscape) {
   .font__title--gout {
@@ -409,15 +388,11 @@ td {
   color: #41963c;
 }
 
-.zoom__menu--enchantee, .zoom__menu--alafrancaise, .zoom__menu--papilles, .zoom__menu--gout {
-  transition: all 1s;
-}
-
 .btn {
-  text-align: center;
-  margin-bottom: 15vw;
   display: flex;
   justify-content: center;
+  text-align: center;
+  margin-bottom: 15vw;
 }
 @media (orientation: landscape) {
   .btn {
@@ -431,69 +406,51 @@ td {
   padding-top: 0.1vw;
   padding-bottom: 0.1vw;
   border-radius: 15px;
-  font-size: 4vw;
   padding: 1.04vw;
-  margin: 2.6vw;
+  margin: 2.6vw 0;
   border: none;
-}
-.btn--soon > h2 {
-  font-size: 2vw;
-  padding: 0;
-  margin: 0;
-}
-@media (max-width: 768px) {
-  .btn--soon > h2 {
-    font-size: 3vw;
-  }
-}
-@media (min-width: 501px) and (max-width: 768px) {
-  .btn--soon > h2 {
-    font-size: 2.5vw;
-  }
-}
-@media (min-width: 992px) {
-  .btn--soon > h2 {
-    font-size: 1.8vw;
-  }
 }
 @media (orientation: landscape) {
   .btn--soon {
     width: 25%;
-    font-size: 2vw;
   }
 }
 @media (orientation: landscape) and (max-width: 768px) {
   .btn--soon {
     width: 35%;
-    font-size: 3vw;
     padding: 0.8vw;
   }
 }
 @media (orientation: landscape) and (min-width: 992px) {
   .btn--soon {
-    font-size: 1.8vw;
     padding: 0.5vw;
   }
 }
-.btn__dot {
-  height: 25px;
-  width: 25px;
-  background-color: #fdcb46;
-  border-radius: 50%;
-  display: inline-block;
-  vertical-align: top;
+.btn--soon > h2 {
+  font-size: 3vw;
+  margin: 0;
 }
 @media (max-width: 768px) {
-  .btn__dot {
-    height: 10px;
-    width: 10px;
+  .btn--soon > h2 {
+    font-size: 4vw;
   }
 }
 @media (orientation: landscape) {
-  .btn__dot {
-    height: 10px;
-    width: 10px;
+  .btn--soon > h2 {
+    font-size: 2vw;
   }
+}
+@media (orientation: landscape) and (max-width: 992px) {
+  .btn--soon > h2 {
+    font-size: 2.5vw;
+  }
+}
+.btn__dot {
+  height: 10px;
+  width: 10px;
+  background-color: #fdcb46;
+  border-radius: 50%;
+  vertical-align: top;
 }
 
 /*# sourceMappingURL=style.css.map */
