--- a/Projets/OhMyFood/css/style-menu-enchantee.css
+++ b/Projets/OhMyFood/css/style-menu-enchantee.css
@@ -255,6 +255,12 @@ h2 > span {
   }
 }
 
+.center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .font {
   font-weight: normal;
   font-family: "arial black";
