pb tablette : peut etre la margin sur menuscest pas la margin menus du coup on tente sur font__table--enchantee"
x
q

zfdpzoetjzo

--- a/Projets/OhMyFood/css/style-menu-enchantee.css
+++ b/Projets/OhMyFood/css/style-menu-enchantee.css
@@ -281,6 +281,7 @@ h2 > span {
 .font__table--enchantee {
   font-size: 2vw;
   font-family: "Segoe Print";
+  margin: 0;
   margin-bottom: 10vw;
 }
 @media (min-width: 992px) {
