--- a/Projets/OhMyFood/css/style-menu-enchantee.css
+++ b/Projets/OhMyFood/css/style-menu-enchantee.css
@@ -325,15 +325,18 @@ tr {
 
 .table__cell--left {
   text-align: left;
+  padding-left: 6.5vw;
 }
 @media (max-width: 1200px) {
   .table__cell--left {
+    padding-left: 6.5vw;
     padding-right: 10vw;
   }
 }
 .table__cell--right {
   text-align: right;
   font-weight: bold;
+  padding-right: 6.5vw;
 }
 
 .double-line {
